RESOLVED FIXED278440
[JSC] Fix error message of `Temporal.Instant.fromEpochMilliseconds`
https://bugs.webkit.org/show_bug.cgi?id=278440
Summary [JSC] Fix error message of `Temporal.Instant.fromEpochMilliseconds`
Sosuke Suzuki
Reported 2024-08-20 19:51:32 PDT
In the current JSC, the `RangeError` message is corrupted when an invalid value is passed to `Temporal.Instant.fromEpochMilliseconds`. For example, `Temporal.Instant.fromEpochMilliseconds(86400_0000_0000_001)` throws a `RangeError` with the message `56545248484848484848484848484849484848484848 epoch nanoseconds is outside of supported range for Temporal.Instant`. This is clearly broken.
Attachments
Sosuke Suzuki
Comment 1 2024-08-20 19:58:29 PDT
EWS
Comment 2 2024-08-21 16:44:42 PDT
Committed 282587@main (df250e04fa34): <https://commits.webkit.org/282587@main> Reviewed commits have been landed. Closing PR #32503 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-08-21 16:45:16 PDT
Note You need to log in before you can comment on or make changes to this bug.