Source/JavaScriptCore/runtime/ISO8601.h
@@ -167,7 +167,7 @@ private:
     {
         if (value > 9)
             asStringImpl(builder, value / 10);
-        builder.append(static_cast<uint64_t>(value % 10) + '0');
+        builder.append(static_cast<LChar>(static_cast<unsigned>(value % 10) + '0'));
     }
 
     static Int128 round(Int128 quantity, unsigned increment, TemporalUnit, RoundingMode);
